<resources>
    <string name="app_name">AHS Merdeka</string>
    <string name="note">Note</string>
    <string name="customers">Customers</string>
    
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="add_customer">Add Customer</string>
    <string name="save">Save</string>
    <string name="dashboard">Dashboard</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="currency">"Rp. "</string>
    <string name="product">Product</string>
    <string name="not_filled_error">Please fill the required fields.</string>
    <string name="edit_product">Edit Product</string>
    <string name="welcome">Welcome!</string>
    <string name="edit_customer">Edit Customer</string>
</resources>
